// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders button with priority=delete 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--split-start btn--delete"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--delete"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with priority=primary 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--split-start btn--primary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--primary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with priority=secondary 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders button with size=large 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--large btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--large btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders loading state 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-label[39m=[32m"button loading"[39m
      [33mclass[39m=[32m"btn btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"progress-spinner"[39m
          [33mrole[39m=[32m"img"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--24"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mfill[39m=[32m"none"[39m
                [33mid[39m=[32m"icon-spinner-24"[39m
                [33mviewBox[39m=[32m"0 0 24 24"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M22.5 12A10.5 10.5 0 1 1 9.514 1.798"[39m
                  [33mstroke[39m=[32m"var(--color-spinner-icon-background, #3665F3)"[39m
                  [33mstroke-linecap[39m=[32m"round"[39m
                  [33mstroke-linejoin[39m=[32m"round"[39m
                  [33mstroke-width[39m=[32m"3"[39m
                [36m/>[39m
                [36m<path[39m
                  [33md[39m=[32m"M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"[39m
                  [33mstroke[39m=[32m"var(--color-spinner-icon-foreground, #E5E5E5)"[39m
                  [33mstroke-linecap[39m=[32m"round"[39m
                  [33mstroke-linejoin[39m=[32m"round"[39m
                  [33mstroke-width[39m=[32m"3"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-spinner-24"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders various options 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--large btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mdisabled[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--large btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mdisabled[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33maria-checked[39m=[32m"false"[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitemradio"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33maria-checked[39m=[32m"false"[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitemradio"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33maria-checked[39m=[32m"false"[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitemradio"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`renders with menu items 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"split-button"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--split-start btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"btn__text"[39m
        [36m>[39m
          [0mButton[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button"[39m
    [36m>[39m
      [36m<button[39m
        [33maria-expanded[39m=[32m"false"[39m
        [33maria-haspopup[39m=[32m"true"[39m
        [33maria-label[39m=[32m"Menu"[39m
        [33mclass[39m=[32m"menu-button__button btn btn--split-end btn--secondary"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button__menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__items"[39m
          [33mid[39m=[32m"s0-5-@content-menu"[39m
          [33mrole[39m=[32m"menu"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 1 that has very long text[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__item"[39m
            [33mrole[39m=[32m"menuitem"[39m
          [36m>[39m
            [36m<span>[39m
              [0mitem 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
